# Checkers-AI

./: README.md  agents.py  compare.py  constants.py  decoder.py  encoder.py  frontend.py  launch_training.py  main.py  mcts.py  nn_model.py  nn_test.py  pyproject.toml  training.py
