[tool.poetry]
name = "checkers-ai"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
imparaai-checkers = "^1.4.2"
tensorflow = "^2.6.0"
tensorflow-gpu = "^2.6.0"
numpy = "^1.19.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
